--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "menu";
 
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -77,7 +78,12 @@ main {
 
     & a {
       position: relative;
+      display: -webkit-inline-box;
+      display: -ms-inline-flexbox;
       display: inline-flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
       flex-direction: column;
     }
 
@@ -100,14 +106,19 @@ main {
 
 // about page
 .about-info {
+  display: -ms-grid;
   display: grid;
   grid-gap: 30px;
+  -ms-grid-rows: auto 30px auto;
   grid-template-areas:
     "bioimage bio bio"
     "job1 job2 job3";
+  -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
     grid-area: bioimage;
     margin: auto;
     border-radius: 50%;
@@ -115,6 +126,9 @@ main {
   }
 
   .bio {
+    -ms-grid-row: 1;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 3;
     grid-area: bio;
     font-size: 1.5;
   }
@@ -135,14 +149,20 @@ main {
   }
 
   .job-1 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
     grid-area: job1;
   }
 
   .job-2 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 3;
     grid-area: job2;
   }
 
   .job-3 {
+    -ms-grid-row: 3;
+    -ms-grid-column: 5;
     grid-area: job3;
   }
 }
@@ -154,8 +174,10 @@ main {
 }
 
 .projects {
+  display: -ms-grid;
   display: grid;
   grid-gap: 0.7rem;
+  -ms-grid-columns: 1fr 0.7rem 1fr 0.7rem 1fr;
   grid-template-columns: repeat(3, 1fr);
 
   .project-description {
@@ -171,6 +193,7 @@ main {
     background-color: transparent;
     width: 27.25rem;
     height: 18.313rem;
+    -webkit-perspective: 1000px;
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
   }
 
@@ -180,12 +203,18 @@ main {
     width: 100%;
     height: 100%;
     text-align: center;
+    -webkit-transition: -webkit-transform 0.8s;
+    transition: -webkit-transform 0.8s;
+    -o-transition: transform 0.8s;
     transition: transform 0.8s;
+    transition: transform 0.8s, -webkit-transform 0.8s;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
   }
 
   /* Do an horizontal flip when you move the mouse over the flip box container */
   .flip-card:hover .flip-card-inner {
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
   }
 
@@ -195,6 +224,7 @@ main {
     position: absolute;
     width: 27.25rem;
     height: 18.313rem;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
 
@@ -210,11 +240,13 @@ main {
   .flip-card-back {
     background-color: black;
     color: white;
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
     border: 3px #fff solid;
     width: 27.25rem;
     height: 18.313rem;
     padding: 30px 20px;
+    z-index: 1;
 
     h3 {
       font-size: 23px;
@@ -256,6 +288,15 @@ main {
       z-index: 1;
     }
 
+    @-webkit-keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+
     @keyframes fadeIn {
       0% {
         opacity: 0;
@@ -267,9 +308,13 @@ main {
 
     /* Show the tooltip text when you mouse over the tooltip container */
     .tooltip:hover .tooltiptext {
+      -webkit-animation-name: fadeIn;
       animation-name: fadeIn;
+      -webkit-animation-duration: 1s;
       animation-duration: 1s;
+      -webkit-animation-delay: 0.4s;
       animation-delay: 0.4s;
+      -webkit-animation-fill-mode: forwards;
       animation-fill-mode: forwards;
       visibility: visible;
     }
@@ -353,9 +398,16 @@ main {
 
 // Contact Page
 .boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   margin-top: 1rem;
 
